--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "Todo List App - Tutedude Assignment 7",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "method-override": "^3.0.0",
